--- a/tools/extension/html/app.html
+++ b/tools/extension/html/app.html
@@ -1,1 +1,2 @@
 <center>Chào <span id="aliases"></span>!</center>
+<div>Cache API: <span id="gc"></span> [<a style="cursor: pointer;" id='free-cache'>free</a>]</div>
