--- a/tools/extension/html/app.html
+++ b/tools/extension/html/app.html
@@ -1,2 +1,15 @@
 <center>Chào <span id="aliases"></span>!</center>
+
+<div style="padding: 5px; margin-top: 25px;">
+    Icon Admin:
+    <select>
+        <option>Hiện ở mọi nơi</option>
+        <option>Chỉ ở FB</option>
+
+        <option>Không hiện</option>
+    </select>
+</div>
+
+<hr>
+
 <div>Cache API: <span id="gc"></span> [<a style="cursor: pointer;" id='free-cache'>free</a>]</div>
