--- a/tools/extension/html/login.html
+++ b/tools/extension/html/login.html
@@ -2,12 +2,12 @@
     <div class="title">Cao Thằng Student</div>
     <div class="box">
             <label for="user">Tài khoản</label>
-            <input type="text" name="username" id="username" value="admin" placeholder="admin">
+            <input type="text" name="username" id="username" value="" placeholder="admin">
         </div>
 
     <div class="box">
             <label for="pass">Mật khẩu</label>
-            <input type="password" name="password" id="password" value="123huy" placeholder="123456">
+            <input type="password" name="password" id="password" value="" placeholder="123456">
         </div>
 
     <input type="submit" id="login" value="Đăng nhập" />
