--- a/source-design/index.html
+++ b/source-design/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login</title>
+        <title>Student Cao Thang</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,28 +17,214 @@
         <script src="js/bootstrap.min.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/v4-shims.js"></script>
+        
 
     </head>
 
     <body>
-
-        <div class="container-fluid">
-            <div class="input-group">
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" aria-label="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item disabled" href="#">Disabled link</a>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-              </span>
-                <input type="text" class="form-control" name="name" id="name" placeholder="" aria-label="">
+        <div class="row">
+        <ul class="menu cf">
+            <li style="background-color: rgb(255, 255, 255);"><a href="" style="color: tomato;">Trang chủ</a></li>
+            <li>
+              <a href="">Khóa</a>
+              <ul class="submenu">
+                <li><a href="">17</a></li>
+                <li><a href="">18</a></li>
+                <li><a href="">19</a></li>
+              </ul>			
+            </li>
+            <li>
+                <a href="">Ngành</a>
+                <ul class="submenu">
+                        <li><a href="">Kế Toán Doanh Nghiệp</a></li>
+                        <li><a href="">Kế Toán</a></li>
+                        <li><a href="">Công Nghệ Thông Tin</a></li>
+                        <li><a href="">Quản Trị Mạng</a></li>
+                        <li><a href="">Cơ Khí</a></li>
+                        <li><a href="">Sửa Chữa Máy Tính</a></li>
+                </ul>	
+            </li>
+            <li><a href="">Bảng xếp hạng</a></li>
+          </ul> 
+        </div>
+        <div class="row">
+            <div class="form-group" style="margin: -20px auto 5px auto;">
+              <input type="text" class="form-control" name="" id="" placeholder="Tìm Kiếm...">
             </div>
         </div>
-
+        <div class="NewProfile row" style="margin:2% auto auto auto; text-align: center;">
+            <hr>
+            <h2 style="width:100%;color: beige;">VỪA CẬP NHẬT</h2>
+            <div class="col-xs-12 col-sm-6 col-lg-3" style="text-align:center; margin-top: 10px;">
+                <div id="carouselId" class="carousel slide" data-ride="carousel" style="text-align: center;">
+                    <div class="carousel-inner" role="listbox"  style="text-align: center;">
+                        <div class="carousel-item active">
+                            <img src="image/home/f1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <div class="overlay">
+                                        <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                        <p class="text" style="top:40%">0306171302</p>
+                                        <div class="block text" style="top:70%" style="margin: auto;">
+                                                <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/home/f2.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <div class="overlay">
+                                        <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                        <p class="text" style="top:40%">0306171302</p>
+                                        <div class="block text" style="top:70%" style="margin: auto;">
+                                                <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/home/f3.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <div class="overlay">
+                                        <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                        <p class="text" style="top:40%">0306171302</p>
+                                        <div class="block text" style="top:70%" style="margin: auto;">
+                                                <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3" style="text-align:center; margin-top: 10px;">
+                    <div id="carouselId1" class="carousel slide" data-ride="carousel" style="text-align: center;">
+                            <div class="carousel-inner" role="listbox"  style="text-align: center;">
+                                <div class="carousel-item active">
+                                    <img src="image/home/f1.jpg" alt="First slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f2.jpg" alt="Second slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f3.jpg" alt="Third slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3" style="text-align:center; margin-top: 10px;">
+                    <div id="carouselId2" class="carousel slide" data-ride="carousel" style="text-align: center;">
+                            <div class="carousel-inner" role="listbox"  style="text-align: center;">
+                                <div class="carousel-item active">
+                                    <img src="image/home/f1.jpg" alt="First slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f2.jpg" alt="Second slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f3.jpg" alt="Third slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3" style="text-align:center; margin-top: 10px;border-radius: 30%;">
+                    <div id="carouselId3" class="carousel slide" data-ride="carousel" style="text-align: center;">
+                            <div class="carousel-inner" role="listbox"  style="text-align: center;">
+                                <div class="carousel-item active">
+                                    <img src="image/home/f1.jpg" alt="First slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f2.jpg" alt="Second slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="image/home/f3.jpg" alt="Third slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                            <div class="overlay">
+                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <div class="block text" style="top:70%" style="margin: auto;">
+                                                            <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            </div>
+            <hr>
+        </div>
     </body>
 
 </html>
