--- a/source-design/index.html
+++ b/source-design/index.html
@@ -42,6 +42,11 @@
                         <li><a href="">Quản Trị Mạng</a></li>
                         <li><a href="">Cơ Khí</a></li>
                         <li><a href="">Sửa Chữa Máy Tính</a></li>
+                        <li><a href="">Ô Tô</a></li>
+                        <li><a href="">Điện Tử Truyền Thông</a></li>
+                        <li><a href="">Tự Động</a></li>
+                        <li><a href="">Điện, Điện Lạnh</a></li>
+                        <li><a href="">Hàn</a></li>
                 </ul>	
             </li>
             <li><a href="">Bảng xếp hạng</a></li>
@@ -105,7 +110,7 @@
                                     <div class="carousel-caption d-none d-md-block">
                                             <div class="overlay">
                                                     <div class="text" style="top:20%">Nguyễn Gia Huy</div>
-                                                    <p class="text" style="top:40%">0306171302</p>
+                                                    <p class="text" style="top:40%">0306171248</p>
                                                     <div class="block text" style="top:70%" style="margin: auto;">
                                                             <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
                                                     </div>
@@ -116,7 +121,7 @@
                                     <img src="image/home/f2.jpg" alt="Second slide">
                                     <div class="carousel-caption d-none d-md-block">
                                             <div class="overlay">
-                                                    <div class="text" style="top:20%">Nguyễn Gia Huy</div>
+                                                    <div class="text" style="top:20%">Lê Dương Hưng Thịnh</div>
                                                     <p class="text" style="top:40%">0306171302</p>
                                                     <div class="block text" style="top:70%" style="margin: auto;">
                                                             <a href=""><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
@@ -224,6 +229,11 @@
                         </div>
             </div>
             <hr>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-12">
+                
+            </div>
         </div>
     </body>
 
