--- a/source-design/index.html
+++ b/source-design/index.html
@@ -57,7 +57,7 @@
         <!--Dropdowm menu-->
         <nav class="menu">
             <ol>
-              <li class="menu-item"><a href="#0">Trang chủ</a></li>
+              <li class="menu-item"><a href="index.html">Trang chủ</a></li>
               <li class="menu-item">
                 <a href="#0">Ngành</a>
                 <ol class="sub-menu">
@@ -78,6 +78,7 @@
                 </ol>
               </li>
               <li class="menu-item"><a href="#0">Bảng xếp hạng</a></li>
+              <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
             </ol>
           </nav>
           <div class="word"></div>
@@ -262,7 +263,7 @@
             </div>
             <hr>-->
             <!--List Profile phổ biến-->
-        <div class="row portfolio-effect NewProfile" style="margin:2% auto auto auto; text-align: center;"> 
+       <!-- <div class="row portfolio-effect NewProfile" style="margin:2% auto auto auto; text-align: center;"> 
           <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">Phổ biến</h2>
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
@@ -316,11 +317,63 @@
                     </div>
                 </div>
               </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                    <img class="portfolio-item__image" src="image/home/f2.jpg" alt="Portfolio Item" width="826" height="551">
+                    <div class="portfolio-item__info">
+                        <h3 class="portfolio-item__header">Nguyen Quoc Dat</h3>
+                        <div class="portfolio-item__links">
+                          <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                            <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f5.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Le Van Thien</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f3.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Nguyen Gia Huy</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                     </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Le Duong Hung Thinh</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                            <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-      
-        <div class="row" style="background-color: black;height: 50px;margin: auto;">
-            <div class="col-xs-12 col-md-12 col-lg-12" style="text-align: center;padding: 15px;">
-                <div class="info" style="color: #c0a062;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+          -->
+        <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:21.4% auto auto auto">
+            <div class="col-xs-12 col-md-12 col-lg-12" style="text-align: center;width: 100%;padding-top: 13px;">
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
             </div>
         </div>
     </body>
