--- a/source-design/index.html
+++ b/source-design/index.html
@@ -18,12 +18,9 @@
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/v4-shims.js"></script>
         <script src="js/TextEffect.js"></script>
-        
-
     </head>
-
     <body>
-        <!--<ul class="menu cf">
+        <!-- Bỏ <ul class="menu cf">
             <li style="background-color: rgb(255, 255, 255);"><a href="" style="color: tomato;">Trang chủ</a></li>
             <li>
               <a href="">Khóa</a>
@@ -55,42 +52,44 @@
         <div class="bg bg2"></div>
         <div class="bg bg3"></div>-->
         <!--Dropdowm menu-->
-        <nav class="menu">
-            <ol>
-              <li class="menu-item"><a href="index.html">Trang chủ</a></li>
-              <li class="menu-item">
-                <a href="#0">Ngành</a>
-                <ol class="sub-menu">
-                  <li class="menu-item"><a href="#0">Kế Toán</a></li>
-                  <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
-                  <li class="menu-item"><a href="#0">Điện Tử Truyền Thông</a></li>
-                  <li class="menu-item"><a href="#0">Công Nghệ Thông Tin</a></li>
-                  <li class="menu-item"><a href="#0">Kế Toán Doanh Nghiệp</a></li>
-                  <li class="menu-item" style="background-color: rgb(216, 187, 167);"><a href="#0">Khác</a></li>
-                </ol>
-              </li>
-              <li class="menu-item">
-                <a href="#0">Khóa</a>
-                <ol class="sub-menu">
-                  <li class="menu-item"><a href="#0">17</a></li>
-                  <li class="menu-item"><a href="#0">18</a></li>
-                  <li class="menu-item"><a href="#0">19</a></li>
-                </ol>
-              </li>
-              <li class="menu-item"><a href="#0">Bảng xếp hạng</a></li>
-              <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
-            </ol>
-          </nav>
-          <div class="word"></div>
-            <div class="search">
-                <input type="checkbox" id="trigger" class="search__checkbox" />
-                <label class="search__label-init" for="trigger"></label>
-                <label class="search__label-active" for="trigger"></label>
-                <div class="search__border"></div>
-                <input type="text" class="search__input" placeholder="Nhập tên một ai đó..."/>
-                <div class="search__close"></div>
-            </div>
-       <!--<div class="NewProfile row" style="margin:2% auto auto auto; text-align: center;">
+      <nav class="menu">
+          <ol>
+            <li class="menu-item"><a href="index.html">Trang chủ</a></li>
+            <li class="menu-item">
+              <a href="Type.html">Ngành</a>
+              <ol class="sub-menu">
+                <li class="menu-item"><a href="#0">Kế Toán</a></li>
+                <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
+                <li class="menu-item"><a href="#0">Điện Tử Truyền Thông</a></li>
+                <li class="menu-item"><a href="#0">Công Nghệ Thông Tin</a></li>
+                <li class="menu-item"><a href="#0">Kế Toán Doanh Nghiệp</a></li>
+                <li class="menu-item" style="background-color: rgb(216, 187, 167);"><a href="#0">Khác</a></li>
+              </ol>
+            </li>
+            <li class="menu-item">
+              <a href="ClassYear.html">Khóa</a>
+              <ol class="sub-menu">
+                <li class="menu-item"><a href="#0">17</a></li>
+                <li class="menu-item"><a href="#0">18</a></li>
+                <li class="menu-item"><a href="#0">19</a></li>
+              </ol>
+            </li>
+            <li class="menu-item"><a href="Charts.html">Bảng xếp hạng</a></li>
+            <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
+          </ol>
+        </nav>
+        <!--Text show (status: display:none;)-->
+        <div class="word"></div>
+        <!--Search-->
+          <div class="search">
+              <input type="checkbox" id="trigger" class="search__checkbox" />
+              <label class="search__label-init" for="trigger"></label>
+              <label class="search__label-active" for="trigger"></label>
+              <div class="search__border"></div>
+              <input type="text" class="search__input" placeholder="Nhập tên một ai đó..."/>
+              <div class="search__close"></div>
+          </div>
+       <!-- Bỏ <div class="NewProfile row" style="margin:2% auto auto auto; text-align: center;">
             <hr>
             <h2 style="width:100%;color: beige;">VỪA CẬP NHẬT</h2>
             <div class="col-xs-12 col-sm-6 col-lg-3" style="text-align:center; margin-top: 10px;">
@@ -263,7 +262,7 @@
             </div>
             <hr>-->
             <!--List Profile phổ biến-->
-       <!-- <div class="row portfolio-effect NewProfile" style="margin:2% auto auto auto; text-align: center;"> 
+       <!-- Bỏ <div class="row portfolio-effect NewProfile" style="margin:2% auto auto auto; text-align: center;"> 
           <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">Phổ biến</h2>
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
@@ -371,8 +370,10 @@
               </div>
             </div>
           -->
-        <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:21.4% auto auto auto">
-            <div class="col-xs-12 col-md-12 col-lg-12" style="text-align: center;width: 100%;padding-top: 13px;">
+        
+          <!--Footer-->
+          <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;bottom: 0%;position: absolute;">
+            <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
                 <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
             </div>
         </div>
