--- a/source-design/trending.html
+++ b/source-design/trending.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Student Cao Thang</title>
+        <title>Student Trending</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -21,13 +21,13 @@
         
 
     </head>
-
     <body>
+      <!--Dropdown menu-->
         <nav class="menu">
             <ol>
                 <li class="menu-item"><a href="index.html">Trang chủ</a></li>
                 <li class="menu-item">
-                <a href="#0">Ngành</a>
+                <a href="Type.html">Ngành</a>
                 <ol class="sub-menu">
                     <li class="menu-item"><a href="#0">Kế Toán</a></li>
                     <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
@@ -38,123 +38,130 @@
                 </ol>
                 </li>
                 <li class="menu-item">
-                <a href="#0">Khóa</a>
+                <a href="ClassYear.html">Khóa</a>
                 <ol class="sub-menu">
                     <li class="menu-item"><a href="#0">17</a></li>
                     <li class="menu-item"><a href="#0">18</a></li>
                     <li class="menu-item"><a href="#0">19</a></li>
                 </ol>
                 </li>
-                <li class="menu-item"><a href="#0">Bảng xếp hạng</a></li>
-                <li class="menu-item"><a href="#0">Thịnh hành</a></li>
+                <li class="menu-item"><a href="Charts.html">Bảng xếp hạng</a></li>
+                <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
             </ol>
         </nav>
+        <!--Profile trending-->
         <div class="row portfolio-effect NewProfile" style="text-align: center;"> 
-    <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">Phổ biến</h2>
-    <div class="col-xs-12 col-sm-6 col-lg-3">
-      <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
-        <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
-        <div class="portfolio-item__info">
-          <h3 class="portfolio-item__header">Le Duong Hung Thinh</h3>
-          <div class="portfolio-item__links">
-            <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                  <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
-            <img class="portfolio-item__image" src="image/home/f3.jpg" alt="Portfolio Item" width="826" height="551">
-            <div class="portfolio-item__info">
-              <h3 class="portfolio-item__header">Nguyen Gia Huy</h3>
-              <div class="portfolio-item__links">
-                <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                  <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
-               </div>
-              </div>
-            </div>
-          </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
-            <img class="portfolio-item__image" src="image/home/f5.jpg" alt="Portfolio Item" width="826" height="551">
-            <div class="portfolio-item__info">
-              <h3 class="portfolio-item__header">Le Van Thien</h3>
-              <div class="portfolio-item__links">
-                <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                  <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+          <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">Phổ biến</h2>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+            <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+              <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
+              <div class="portfolio-item__info">
+                <h3 class="portfolio-item__header">Le Duong Hung Thinh</h3>
+                <div class="portfolio-item__links">
+                  <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
-              <img class="portfolio-item__image" src="image/home/f2.jpg" alt="Portfolio Item" width="826" height="551">
-              <div class="portfolio-item__info">
-                  <h3 class="portfolio-item__header">Nguyen Quoc Dat</h3>
-                  <div class="portfolio-item__links">
-                    <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                      <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f3.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Nguyen Gia Huy</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                    </div>
                     </div>
                   </div>
-              </div>
+                </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
-              <img class="portfolio-item__image" src="image/home/f2.jpg" alt="Portfolio Item" width="826" height="551">
-              <div class="portfolio-item__info">
-                  <h3 class="portfolio-item__header">Nguyen Quoc Dat</h3>
-                  <div class="portfolio-item__links">
-                    <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                      <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f5.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Le Van Thien</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                      </div>
                     </div>
                   </div>
-              </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
-            <img class="portfolio-item__image" src="image/home/f5.jpg" alt="Portfolio Item" width="826" height="551">
-            <div class="portfolio-item__info">
-              <h3 class="portfolio-item__header">Le Van Thien</h3>
-              <div class="portfolio-item__links">
-                <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                  <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
-            <img class="portfolio-item__image" src="image/home/f3.jpg" alt="Portfolio Item" width="826" height="551">
-            <div class="portfolio-item__info">
-              <h3 class="portfolio-item__header">Nguyen Gia Huy</h3>
-              <div class="portfolio-item__links">
-                <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                  <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
-               </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                    <img class="portfolio-item__image" src="image/home/f2.jpg" alt="Portfolio Item" width="826" height="551">
+                    <div class="portfolio-item__info">
+                        <h3 class="portfolio-item__header">Nguyen Quoc Dat</h3>
+                        <div class="portfolio-item__links">
+                          <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                            <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                          </div>
+                        </div>
+                    </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3">
-          <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
-            <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
-            <div class="portfolio-item__info">
-              <h3 class="portfolio-item__header">Le Duong Hung Thinh</h3>
-              <div class="portfolio-item__links">
-                <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
-                      <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                    <img class="portfolio-item__image" src="image/home/f2.jpg" alt="Portfolio Item" width="826" height="551">
+                    <div class="portfolio-item__info">
+                        <h3 class="portfolio-item__header">Nguyen Quoc Dat</h3>
+                        <div class="portfolio-item__links">
+                          <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                            <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                          </div>
+                        </div>
+                    </div>
+                </div>
               </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item  portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f5.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Le Van Thien</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f3.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Nguyen Gia Huy</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                        <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
+                  <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
+                  <div class="portfolio-item__info">
+                    <h3 class="portfolio-item__header">Le Duong Hung Thinh</h3>
+                    <div class="portfolio-item__links">
+                      <div class="block text portfolio-item__link-block" style="top:70%" style="margin: auto;">
+                            <a href="" class="portfolio-item__link"><i class="hovicon effect-1 sub-b" style="width:30px;height: 30px;">INFO</i></a>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
+        <!--Footer-->
+        <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;">
+            <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+            </div>
         </div>
     </body>
 </html>
