--- a/source-design/Charts.html
+++ b/source-design/Charts.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/v4-shims.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/anystyle.css">
 
         <!------Javascript------>
         <script src="js/jquery-3.4.1.min.js"></script>
@@ -47,10 +48,63 @@
                 <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
             </ol>
         </nav>
+        <!--Charts-->
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-2">
+                <ul class="left">
+                    <h4>Xếp hạng</h4>
+                    <li class="right"><a href="">Ngày</a></li>
+                    <li class="right"><a href="">Tuần</a></li>
+                    <li class="right"><a href="">Tháng</a></li>
+                </ul>  
+            </div>
+            <div class="col-xs-12 col-md-12 col-lg-10" style="padding:0%">
+                <div class="chart-number">
+                    <div class="number one">1</div>
+                    <div class="info-number">Tên</div>
+                </div>
+                <div class="chart-number">
+                    <div class="number two">2</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number three">3</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">4</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">5</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">6</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">7</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">8</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">9</div>
+                    <div class="info-number"></div>
+                </div>
+                <div class="chart-number">
+                    <div class="number">10</div>
+                    <div class="info-number"></div>
+                </div>
+            </div>
+        </div>
         <!--Footer-->
         <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;bottom:0%;">
             <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
-                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by <div style="color: #c0a062;display: inline;">@YoungBuffalo</div></div>
             </div>
         </div>
     </body>
