--- a/source-design/index.html
+++ b/source-design/index.html
@@ -58,12 +58,12 @@
             <li class="menu-item">
               <a href="Type.html">Ngành</a>
               <ol class="sub-menu">
-                <li class="menu-item"><a href="#0">Kế Toán</a></li>
-                <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
-                <li class="menu-item"><a href="#0">Điện Tử Truyền Thông</a></li>
-                <li class="menu-item"><a href="#0">Công Nghệ Thông Tin</a></li>
-                <li class="menu-item"><a href="#0">Kế Toán Doanh Nghiệp</a></li>
-                <li class="menu-item" style="background-color: rgb(216, 187, 167);"><a href="#0">Khác</a></li>
+                <li class="menu-item"><a href="Type.html">Kế Toán</a></li>
+                <li class="menu-item"><a href="Type.html">Quản Trị Mạng</a></li>
+                <li class="menu-item"><a href="Type.html">Điện Tử Truyền Thông</a></li>
+                <li class="menu-item"><a href="Type.html">Công Nghệ Thông Tin</a></li>
+                <li class="menu-item"><a href="Type.html">Kế Toán Doanh Nghiệp</a></li>
+                <li class="menu-item" style="background-color: rgb(216, 187, 167);"><a href="Type.html">Khác</a></li>
               </ol>
             </li>
             <li class="menu-item">
@@ -374,7 +374,7 @@
           <!--Footer-->
           <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;bottom: 0%;position: absolute;">
             <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
-                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by <div style="color: #c0a062;display: inline;">@YoungBuffalo</div></div>
             </div>
         </div>
     </body>
