--- a/source-design/trending.html
+++ b/source-design/trending.html
@@ -160,7 +160,7 @@
         <!--Footer-->
         <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;">
             <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
-                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by <div style="color: #c0a062;display: inline;">@YoungBuffalo</div></div>
             </div>
         </div>
     </body>
