--- a/source-design/Type.html
+++ b/source-design/Type.html
@@ -26,7 +26,7 @@
             <ol>
                 <li class="menu-item"><a href="index.html">Trang chủ</a></li>
                 <li class="menu-item">
-                <a href="#0">Ngành</a>
+                <a href="Type.html">Ngành</a>
                 <ol class="sub-menu">
                     <li class="menu-item"><a href="#0">Kế Toán</a></li>
                     <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
@@ -37,12 +37,12 @@
                 </ol>
                 </li>
                 <li class="menu-item">
-                <a href="ClassYear.html">Khóa</a>
-                <ol class="sub-menu">
-                    <li class="menu-item"><a href="#0">17</a></li>
-                    <li class="menu-item"><a href="#0">18</a></li>
-                    <li class="menu-item"><a href="#0">19</a></li>
-                </ol>
+                  <a href="ClassYear.html">Khóa</a>
+                  <ol class="sub-menu">
+                      <li class="menu-item"><a href="#0">17</a></li>
+                      <li class="menu-item"><a href="#0">18</a></li>
+                      <li class="menu-item"><a href="#0">19</a></li>
+                  </ol>
                 </li>
                 <li class="menu-item"><a href="Charts.html">Bảng xếp hạng</a></li>
                 <li class="menu-item"><a href="trending.html">Thịnh hành</a></li>
@@ -65,7 +65,7 @@
             </div>
             <div class="col-lg-10" style="padding:1%;">
                     <div class="row portfolio-effect NewProfile" style="text-align: center;"> 
-                            <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">17</h2>
+                            <h2 style="width:100%;color: #c0a062;border-bottom:1px solid #c0a062;">Tên Ngành</h2>
                             <div class="col-xs-12 col-sm-6 col-lg-4">
                               <div class="portfolio-item portfolio-effect__item portfolio-item--eff1">
                                 <img class="portfolio-item__image" src="image/home/f1.jpg" alt="Portfolio Item" width="826" height="551">
@@ -189,7 +189,7 @@
         <!--Footer-->
         <div class="row" style="background-color: rgb(255, 255, 255);height: 50px;margin:auto auto auto auto;text-align: center;width: 100%;bottom:0%;">
             <div class="col-xs-12 col-md-12 col-lg-12" style="padding-top: 13px;">
-                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by @YoungBuffalo</div>
+                <div class="info" style="color: #000000;font-size: 15px;">© Copyright 2019. Licensed by <div style="color: #c0a062;display: inline;">@YoungBuffalo</div></div>
             </div>
         </div>
     </body>
