đẹp và đẹp hơn :))

--- a/source-design/Charts.html
+++ b/source-design/Charts.html
@@ -26,13 +26,13 @@
             <ol>
                 <li class="menu-item"><a href="index.html">Trang chủ</a></li>
                 <li class="menu-item">
-                <a href="#0">Ngành</a>
+                <a href="Type.html">Ngành</a>
                 <ol class="sub-menu">
-                    <li class="menu-item"><a href="#0">Kế Toán</a></li>
-                    <li class="menu-item"><a href="#0">Quản Trị Mạng</a></li>
-                    <li class="menu-item"><a href="#0">Điện Tử Truyền Thông</a></li>
-                    <li class="menu-item"><a href="#0">Công Nghệ Thông Tin</a></li>
-                    <li class="menu-item"><a href="#0">Kế Toán Doanh Nghiệp</a></li>
+                    <li class="menu-item"><a href="Type.html">Kế Toán</a></li>
+                    <li class="menu-item"><a href="Type.html">Quản Trị Mạng</a></li>
+                    <li class="menu-item"><a href="Type.html">Điện Tử Truyền Thông</a></li>
+                    <li class="menu-item"><a href="Type.html">Công Nghệ Thông Tin</a></li>
+                    <li class="menu-item"><a href="Type.html">Kế Toán Doanh Nghiệp</a></li>
                     <li class="menu-item" style="background-color: rgb(216, 187, 167);"><a href="#0">Khác</a></li>
                 </ol>
                 </li>
@@ -49,7 +49,7 @@
             </ol>
         </nav>
         <!--Charts-->
-        <div class="row">
+        <div class="row" style="margin: 0%;height: 100%;">
             <div class="col-xs-12 col-md-12 col-lg-2">
                 <ul class="left">
                     <h4>Xếp hạng</h4>
@@ -58,46 +58,56 @@
                     <li class="right"><a href="">Tháng</a></li>
                 </ul>  
             </div>
-            <div class="col-xs-12 col-md-12 col-lg-10" style="padding:0%">
+            <div class="col-xs-12 col-md-12 col-lg-10" style="padding:2%">
                 <div class="chart-number">
                     <div class="number one">1</div>
-                    <div class="info-number">Tên</div>
+                    <div class="info-number once"><a href="#">Lê Dương Hưng Thịnh</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number two">2</div>
-                    <div class="info-number"></div>
+                    <div class="info-number twoo"><a href="#">Nguyễn Gia Huy</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number three">3</div>
-                    <div class="info-number"></div>
+                    <div class="info-number threee"><a href="#">Nguyễn Đặng Hoàng Chương</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">4</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Lê Văn Thiện</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">5</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Nguyễn Quốc Đạt</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">6</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Lê Công Đức</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">7</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Nguyễn Ngọc Thành</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">8</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Nguyễn Hữu Nhân</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">9</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Lê Văn Tân</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
                 <div class="chart-number">
                     <div class="number">10</div>
-                    <div class="info-number"></div>
+                    <div class="info-number"><a href="#">Nguyễn Danh Huỳnh</a></div>
+                    <div class="info-charts">Lượt tìm kiếm</div>
                 </div>
             </div>
         </div>
